# VolumeVista

./: ProjectGantChartSem-2.mpp  README.md
Adam VolumeVista main Codes-Testing/: settings.json
Adam VolumeVista main Codes-Testing/Sem2/: CombinedVolumeMixer.java  SoundCloudMixer.java  VimeoMixer.java  VolumeSlider.java  YouTubeMixer.java
Adam VolumeVista main Codes-Testing/Sem2/CombinedCode/: AudioManagerHelper.java  CombinedVolumeMixer.java  MainApp.java  SoundCloudMixer.java  VimeoMixer.java  VolumeMediaController.java  VolumeSlider.java  YouTubeMixer.java
Adam VolumeVista main Codes-Testing/Sem2/Testing/: AudioManagerHelperTest.java  CombinedVolumeMixerTest.java  MainAppTest.java  SoundCloudMixerTest.java  VimeoMixerTest.java  VolumeMediaControllerTest.java  (+2 more)
Codes/: CombinedVolumeMixer.java  SoundCloudVolumeMixer.java  SpotifyVolumeMixer.java  VimeoMixer.java  VolumeSlider.java  YouTubeMixer.java  YouTubeVolumeMixer.java  settings.json
Codes/Sem2/: CombinedVolumeMixer.java  SoundCloudMixer.java
Codes/src/: CombinedVolumeMixer.java  SoundCloudMixer.java  VimeoMixer.java  VolumeSlider.java  WindowsAudioMixer.java  YouTubeMixer.java
Dhavish23 VolumeVista 1stGUI projectGUI/: CMakeLists.txt  test.cpp  test.h  test.ui
Equipment/: Products priceList.ods
VolumeVista main Code/: launch.json
VolumeVista main Code/Sem2/: CombinedVolumeMixer.java  SoundCloudMixer.java  VimeoMixer.java  VolumeSlider.java  YouTubeMixer.java
demo/: pom.xml
projectGUI/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaPlayer.cpp  mediaPlayer.h  projectGUI.pro
(+48 files in other folders)
